// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop first screens: _lg 1`] = `
Object {
  "css": Object {
    "@media (max-width: 1024px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`desktop first screens: _md 1`] = `
Object {
  "css": Object {
    "@media (max-width: 768px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`desktop first screens: _sm 1`] = `
Object {
  "css": Object {
    "@media (max-width: 640px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`desktop first screens: _xl 1`] = `
Object {
  "css": Object {
    "@media (max-width: 1280x)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`desktop first screens: _xxl 1`] = `
Object {
  "css": Object {
    "@media (max-width: 1536px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`directions: ltr 1`] = `
Object {
  "css": Object {
    "[dir='ltr'] &, [dir='ltr']&": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`directions: rtl 1`] = `
Object {
  "css": Object {
    "[dir='rtl'] &, [dir='rtl']&": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`mobile first screens: lg 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1024px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`mobile first screens: md 1`] = `
Object {
  "css": Object {
    "@media (min-width: 768px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`mobile first screens: sm 1`] = `
Object {
  "css": Object {
    "@media (min-width: 640px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`mobile first screens: xl 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1280x)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`mobile first screens: xxl 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1536px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`motions: motionReduce 1`] = `
Object {
  "css": Object {
    "@media (prefers-reduced-motion: reduce)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`motions: motionSafe 1`] = `
Object {
  "css": Object {
    "@media (prefers-reduced-motion: no-preference)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`only screens: $lg 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1024px) and (max-width: 1280px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`only screens: $md 1`] = `
Object {
  "css": Object {
    "@media (min-width: 768px) and (max-width: 1024px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`only screens: $sm 1`] = `
Object {
  "css": Object {
    "@media (min-width: 640px) and (max-width: 768px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`only screens: $xl 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1280px) and (max-width: 1536px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`only screens: $xxl 1`] = `
Object {
  "css": Object {
    "@media (min-width: 1536px)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`orientations: landscape 1`] = `
Object {
  "css": Object {
    "@media (orientation: landscape)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`orientations: portrait 1`] = `
Object {
  "css": Object {
    "@media (orientation: portrait)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`themes: $dark 1`] = `
Object {
  "css": Object {
    ".dark &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`themes: $light 1`] = `
Object {
  "css": Object {
    ".light &": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`themes: dark 1`] = `
Object {
  "css": Object {
    "@media (prefers-color-scheme: dark)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`themes: light 1`] = `
Object {
  "css": Object {
    "@media (prefers-color-scheme: light)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;
